--- a/login.html
+++ b/login.html
@@ -11,11 +11,18 @@
     <div class="side-image login-image"></div>
     <div class="form-box glass">
         <h2>Log In</h2>
+
         <form action="/login" method="POST">
             <input type="email" name="email" placeholder="Email" required>
             <input type="password" name="password" placeholder="Password" required>
+
+            {% if error %}
+            <div class="error-box">{{ error }}</div>
+            {% endif %}
+
             <button class="button" type="submit">Log In</button>
         </form>
+
         <p>Don't have an account? <a href="/signup">Sign Up</a></p>
     </div>
 </div>
